# streamlit_cadastro

./: README.md  acidentes.csv  cadastro.py  pyproject.toml
pages/: 1_dados.py
